fix: corrected tests for services that now work with dto